introduce mandatory fixed-width class p-navigation__row and fix spacing

--- a/scss/_patterns_navigation.scss
+++ b/scss/_patterns_navigation.scss
@@ -78,10 +78,10 @@ $nav-border-bottom-thickness: 1px;
       white-space: nowrap;
 
       @media (max-width: $breakpoint-navigation-threshold) {
-        padding: $spv-inner--medium $grid-margin-width;
+        padding: $spv-inner--medium 0;
 
         &::before {
-          background: $color-light;
+          background: $color-mid-light;
           content: '';
           height: $nav-border-bottom-thickness;
           left: 0;
@@ -91,18 +91,8 @@ $nav-border-bottom-thickness: 1px;
         }
       }
 
-      @media (min-width: $breakpoint-navigation-threshold + 1) {
+      @media (min-width: $breakpoint-navigation-threshold) {
         padding: $spv-inner--medium $sph-inner;
-
-        &::before {
-          background: $border-color;
-          bottom: 0;
-          content: '';
-          height: $nav-border-bottom-thickness;
-          left: 0;
-          position: absolute;
-          right: 0;
-        }
       }
 
       &:hover {
@@ -128,7 +118,8 @@ $nav-border-bottom-thickness: 1px;
     @media (max-width: $breakpoint-navigation-threshold) {
       margin-top: -1px; // prevents bottom border of nav from moving 1px
     }
-    @media (min-width: $breakpoint-navigation-threshold + 1) {
+
+    @media (min-width: $breakpoint-navigation-threshold) {
       display: flex;
       flex-wrap: wrap;
     }
@@ -138,7 +129,7 @@ $nav-border-bottom-thickness: 1px;
     display: flex;
     flex: 0 0 auto;
     height: 3rem;
-    margin: 0 $sph-inner 0 $grid-margin-width;
+    margin: 0;
 
     .p-navigation__link {
       display: flex;
@@ -179,12 +170,9 @@ $nav-border-bottom-thickness: 1px;
     }
   }
 
-  &__row,
-  & .row {
+  &__row {
     display: flex;
-    padding-left: 0;
-    padding-right: 0;
-    width: 100%;
+    @extend %fixed-width-container;
 
     @media (max-width: $breakpoint-navigation-threshold) {
       flex-direction: column;
@@ -215,7 +203,7 @@ $nav-border-bottom-thickness: 1px;
     &--open,
     &--close {
       display: none;
-      margin: 0 $grid-margin-width auto $sph-inner;
+      margin: 0 0 auto $sph-inner;
       padding: $spv-inner--medium 0;
     }
 
